# sdcvalidator

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  FIX_PLAN_xsd11_substitution_restriction.md  LICENSE  README.md  SECURITY.md  SHA256SUMS.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  validation_issue.md
.github/workflows/: release.yml  security.yml  test.yml
sdcvalidator/sdc4/: README.md
src/sdcvalidator/: __init__.py  cli.py  constants.py  converters.py  error_classifier.py  error_mapper.py  exceptions.py  instance_modifier.py  mcp_server.py  schema_checker.py  validator.py  xsd11_restriction.py
tests/: conftest.py  test_converters.py  test_error_classifier.py  test_error_mapper.py  test_instance_modifier.py  test_mcp_server.py  test_recovery.py  test_schema_checker.py  test_validator.py  test_xsd11_restriction.py
